2011-04-18  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        add labels to results html page
        https://bugs.webkit.org/show_bug.cgi?id=58803

        -fix iframe size to be the size of the png results
        -fix a bunch of aesthetic nits
        -fix some incorrectly styled code

        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:

2011-04-18  Chang Shu  <cshu@webkit.org>

        Reviewed by Eric Seidel.

        WebKitTestRunner needs layoutTestController.pathToLocalResource
        https://bugs.webkit.org/show_bug.cgi?id=42541

        * WebKitTestRunner/InjectedBundle/Bindings/LayoutTestController.idl:
        * WebKitTestRunner/InjectedBundle/LayoutTestController.h:
        * WebKitTestRunner/InjectedBundle/mac/LayoutTestControllerMac.mm:
        (WTR::LayoutTestController::pathToLocalResource):
        * WebKitTestRunner/InjectedBundle/qt/LayoutTestControllerQt.cpp:
        (WTR::LayoutTestController::pathToLocalResource):
        * WebKitTestRunner/InjectedBundle/win/LayoutTestControllerWin.cpp:
        (WTR::LayoutTestController::pathToLocalResource):

2011-04-18  Timothy Hatcher  <timothy@apple.com>

        Make update-webkit-localizable-strings put WebKit/win strings in WebCore
        now that all localized strings in WebKit/win use WEB_UI_STRING.

        https://webkit.org/b/58747

        Reviewed by Dan Bernstein.

        * Scripts/update-webkit-localizable-strings: Remove the code that updated WebKit/win differently.

2011-04-18  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Adam Roben.

        [WIN] Use WCHAR instead of TCHAR
        https://bugs.webkit.org/show_bug.cgi?id=58755

        We always use the UNICODE versions of windows functions, so
        the usage of TCHAR makes no sense and mixing them is bad style.

        * WinLauncher/PrintWebUIDelegate.cpp:
          Also fix various style issues (including indentation and removal of ugly C-casts).